fixes Full-electric Powertrains page spacing

--- a/wp-content/themes/classy/sass/pages/powetrains.scss
+++ b/wp-content/themes/classy/sass/pages/powetrains.scss
@@ -42,7 +42,11 @@
   }
 
   .intro {
-    padding: 20px 0 90px 0;
+    padding: 20px 0 45px 0;
+
+    @media screen and (min-width: 768px) {
+      padding: 20px 0 90px 0;
+    }
 
     .h2 {
       margin-top: 0;
